[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memhq-langchain"
version = "0.1.0"
description = "MemHQ adapter for LangChain — chat message history and retriever backed by MemHQ."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "MemHQ", email = "hello@memhq.ai" }]
keywords = ["memhq", "langchain", "memory", "ai", "agent", "llm", "rag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.25.0",
    "langchain-core>=0.3.0",
]

[project.urls]
Homepage = "https://memhq.ai"
Documentation = "https://docs.memhq.ai/sdks/langchain-py"
Repository = "https://github.com/MemHQ/memhq"

[tool.setuptools]
packages = ["memhq_langchain"]
